--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -701,6 +701,12 @@ h6 a {
   color: #ffbd59;
   margin-bottom: 6px;
 }
+@media only screen and (max-width: 767px) {
+  .services .ser-single i {
+    font-size: 20px;
+    padding: 6px 8px;
+  }
+}
 .services .ser-single h3 {
   font-size: 26px;
   font-weight: 500;
