--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -58,6 +58,10 @@
       font-weight: 700;
       color: #ffbd59;
       margin-bottom: 6px;
+      @media only screen and (max-width: 767px) {
+        font-size: 20px;
+        padding: 6px 8px;
+      }
     }
     h3{
       font-size: 26px;
