--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -8,6 +8,6 @@ $bg-g:#0F1113;
 $bg-gray:#707070;
 $bg-nav-collapse:#191a1a;
 $primary-color: #4BD5FF;
-$primary-color: #ffbd59;
+// $primary-color: #ffbd59;
 $text-color: #bebebe;
 $title-color:#fff;
