--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -56,7 +56,7 @@
       text-align: center;
       font-size: 22px;
       font-weight: 700;
-      color: #ffbd59;
+      color: $primary-color;
       margin-bottom: 6px;
       @media only screen and (max-width: 767px) {
         font-size: 20px;
@@ -195,4 +195,17 @@
     }
   }
 }
+}
+
+
+
+/*--------------------------------------------------------------
+  ## coming-con
+--------------------------------------------------------------*/
+
+.coming-con{
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
