--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -851,13 +851,48 @@ h6 a {
 }
 
 /*--------------------------------------------------------------
-  ## coming-con
+  ## note
 --------------------------------------------------------------*/
+.note {
+  background-color: #0F1113;
+}
+
 .coming-con {
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+}
+.coming-con h5 {
+  font-size: 24px;
+  margin-top: 20px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+.coming-con h5 span {
+  font-size: 30px;
+  font-weight: 700;
+  color: #4BD5FF;
+}
+@media only screen and (max-width: 767px) {
+  .coming-con h5 span {
+    font-size: 24px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .coming-con h5 {
+    font-size: 21px;
+    margin-top: 16px;
+    margin-bottom: 11px;
+  }
+}
+.coming-con p:not(:last-child) {
+  margin-bottom: 12px;
+}
+@media only screen and (max-width: 767px) {
+  .coming-con p:not(:last-child) {
+    margin-bottom: 8px;
+  }
 }
 
 /*--------------------------------------------------------------
