--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -200,12 +200,42 @@
 
 
 /*--------------------------------------------------------------
-  ## coming-con
+  ## note
 --------------------------------------------------------------*/
-
+.note{
+background-color: $bg-g;
+}
 .coming-con{
+
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  h5{
+    span{
+      font-size: 30px;
+      font-weight: 700;
+      color: $primary-color;
+      @media only screen and (max-width: 767px) {
+        font-size: 24px;
+      }
+    }
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: 500;
+    margin-bottom: 16px;
+    @media only screen and (max-width: 767px) {
+      font-size: 21px;
+      margin-top: 16px;
+      margin-bottom: 11px;
+    }
+  }
+  p{
+    &:not(:last-child){
+      margin-bottom: 12px;
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 8px;
+      }
+    }
+  }
 }
