--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,6 +296,7 @@ h6 a {
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
   background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.17);
 }
 
 .navbar {
@@ -320,9 +321,19 @@ h6 a {
   text-decoration: none;
 }
 .navbar .navbar-brand img {
-  height: 43px;
+  height: 55px;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+}
+@media only screen and (max-width: 1399px) {
+  .navbar .navbar-brand img {
+    height: 51px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .navbar .navbar-brand img {
+    height: 43px;
+  }
 }
 @media only screen and (max-width: 767px) {
   .navbar .navbar-brand img {
@@ -331,7 +342,7 @@ h6 a {
 }
 @media only screen and (max-width: 482px) {
   .navbar .navbar-brand img {
-    height: 35px;
+    height: 38px;
   }
 }
 .navbar .navbar-nav .nav-item {
@@ -457,9 +468,19 @@ h6 a {
   padding: 0;
 }
 .sticky .navbar .navbar-brand img {
-  height: 43px;
+  height: 51px;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+}
+@media only screen and (max-width: 1399px) {
+  .sticky .navbar .navbar-brand img {
+    height: 51px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .sticky .navbar .navbar-brand img {
+    height: 43px;
+  }
 }
 @media only screen and (max-width: 767px) {
   .sticky .navbar .navbar-brand img {
@@ -468,7 +489,7 @@ h6 a {
 }
 @media only screen and (max-width: 482px) {
   .sticky .navbar .navbar-brand img {
-    height: 35px;
+    height: 38px;
   }
 }
 .sticky .navbar .navbar-toggler .toggler-icon {
