--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,7 +296,7 @@ h6 a {
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
   background-color: transparent;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.17);
+  border-bottom: 1px solid transparent;
 }
 
 .navbar {
@@ -450,6 +450,7 @@ h6 a {
   background-color: #000000;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.17);
 }
 .sticky .navbar {
   padding: 12px 0;
