--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -953,17 +953,17 @@ h6 a {
   }
 }
 .images-sec .swiper-pagination .swiper-pagination-bullet {
-  width: 40px;
-  height: 3px;
-  border-radius: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
   background-color: #fff;
   opacity: 1;
   background-color: #4BD5FF;
 }
 @media only screen and (max-width: 767px) {
   .images-sec .swiper-pagination .swiper-pagination-bullet {
-    width: 35px;
-    height: 3px;
+    width: 10px;
+    height: 10px;
   }
 }
 .images-sec .swiper-pagination .swiper-pagination-bullet-active {
