--- a/assets/scss/_mem-slider.scss
+++ b/assets/scss/_mem-slider.scss
@@ -2,12 +2,11 @@
 # images-sec
 --------------------------------------------------------------*/
 
-
 .images-sec {
- background-image: url('../img/resume/patern.jpg');
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
+  background-image: url("../img/resume/patern.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .testimonial-item {
     box-sizing: content-box;
@@ -15,13 +14,11 @@
     background: #fff;
     text-align: center;
     @media only screen and (max-width: 1199px) {
-     padding: 40px 30px;
+      padding: 40px 30px;
     }
 
-
     @media only screen and (max-width: 767px) {
-
-     margin: 10px 20px;
+      margin: 10px 20px;
     }
   }
 
@@ -29,19 +26,19 @@
     margin-top: 20px;
     position: relative;
     @media only screen and (max-width: 767px) {
-     margin-top: 5px;
+      margin-top: 5px;
     }
 
     .swiper-pagination-bullet {
-      width: 40px;
-      height: 3px;
-      border-radius: 0;
+      width: 10px;
+      height: 10px;
+      border-radius: 100%;
       background-color: #fff;
       opacity: 1;
       background-color: $primary-color;
       @media only screen and (max-width: 767px) {
-        width: 35px;
-      height: 3px;
+        width: 10px;
+        height: 10px;
       }
     }
 
@@ -54,7 +51,6 @@
     opacity: 0.3;
     opacity: 1;
     transition: 0.5s ease-in-out;
-
   }
 }
 
