--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&display=swap"); /*--------------------------------------------------------------
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+/*--------------------------------------------------------------
 # base
 --------------------------------------------------------------*/
 ::-moz-selection {
@@ -702,6 +704,8 @@ h6 a {
       -ms-flex-direction: column;
           flex-direction: column;
   border: 1px solid #1f2327;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 @media only screen and (max-width: 767px) {
   .services .ser-single {
@@ -709,6 +713,7 @@ h6 a {
   }
 }
 .services .ser-single i {
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   background-color: #000000;
   padding: 7px 10px;
@@ -786,6 +791,9 @@ h6 a {
     font-size: 15px;
     padding: 9px 18px;
   }
+}
+.services .ser-single:hover {
+  background-color: #2f2e2e;
 }
 
 /*--------------------------------------------------------------
@@ -1225,5 +1233,12 @@ h6 a {
 }
 .footer-list ul a img {
   height: 36px;
+}
+.footer-list .stars {
+  text-align: center;
+  margin-top: 10px;
+}
+.footer-list .stars img {
+  height: 20px;
 }
 /*# sourceMappingURL=main.css.map */
