--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+$font-family-nunito: "Nunito", sans-serif;
 
 $bg-white:#FFFFFF;
 $bg-black:#000000;
